--- a/app/src/main/res/layout/item_date_header.xml
+++ b/app/src/main/res/layout/item_date_header.xml
@@ -26,7 +26,7 @@
         android:text="₹ 17,661.00"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/error_color"
+        android:textColor="?attr/primaryTextColor"
         android:layout_gravity="center_vertical" />
 
 </LinearLayout>
