--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -159,4 +159,12 @@
         <item name="android:layout_marginBottom">20dp</item>
     </style>
 
+    <!-- Modern Toolbar Title Style - Dark Theme -->
+    <style name="ToolbarTitleStyle" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">?attr/primaryTextColor</item>
+        <item name="android:letterSpacing">0.02</item>
+    </style>
+
 </resources>
