--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@android:drawable/ic_menu_sort_alphabetically"
         android:title="Categories" />
     
+    <item
+        android:id="@+id/nav_recurring_expenses"
+        android:icon="@android:drawable/ic_menu_recent_history"
+        android:title="Recurring" />
+    
 </menu>
